[package]
name = "simple-feed-poster-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
syndication = { git = "https://github.com/parksb/syndication.git", rev = "e15643d3e79ad6817af83375a4ad69b0d254e3e8" }
rss = { version = "2.0.7", default-features = false }
atom_syndication = { version = "0.12.2", default-features = false }

cron = "0.12.1"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }

log = "0.4.21"
moko256_systemd_stdio_logger = { git = "https://github.com/moko256/moko256_systemd_stdio_logger_rust.git", tag = "v1.0.1" }

chrono = { version = "0.4.35", default-features = false, features = [
    "clock",
    "std",
] }

tokio = { version = "1.36.0", features = ["macros", "rt"] }

reqwest = { version = "0.11.27", default-features = false, features = [
    "native-tls",
    "gzip",
    "json",
] }
